Implementing Login and Logout

--- a/test/src/app/main/navbar/navbar.component.html
+++ b/test/src/app/main/navbar/navbar.component.html
@@ -1,1 +1,9 @@
-<p>navbar works!</p>
+<div id="container">
+    <div>
+        <a>Current Offer</a>
+        <a>Manage Users</a>
+    </div>
+    <div>
+        <a (click)="logout()">LogOut</a>
+    </div>
+</div>
