--- a/test/src/styles.css
+++ b/test/src/styles.css
@@ -3,3 +3,9 @@ body{
     font-family: Verdana;
     margin: 0;
 }
+app-offer{
+    margin: 0 auto;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
