--- a/test/src/app/main/navbar/navbar.component.html
+++ b/test/src/app/main/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <div id="container">
     <div>
-        <a>Current Offer</a>
-        <a>Manage Users</a>
+        <a routerLink="/main">Current Offer</a>
+        <a routerLink="/admin">Manage Users</a>
     </div>
     <div>
         <a (click)="logout()">LogOut</a>
