--- a/test/src/app/main/navbar/navbar.component.css
+++ b/test/src/app/main/navbar/navbar.component.css
@@ -14,6 +14,11 @@ a{
     background-color: lightblue;
     text-align: center;
     justify-items: center;
+    text-decoration: none;
+}
+a:visited{
+    color: black;
+    text-decoration: none;
 }
 a:hover{
     color: white;
