--- a/test/src/app/main/selected-car/selected-car.component.html
+++ b/test/src/app/main/selected-car/selected-car.component.html
@@ -1,4 +1,5 @@
-<div *ngFor="let car of cars" (click)="onSelect(car)">
+<app-navbar></app-navbar>
+<div>
     <img [src]="car.image">
     <h2>{{car.make}}</h2>
     <h4>{{car.model}}</h4>
